# Web-Search

./: .gitignore  Inverted_Index.cpp  Inverted_Index.h  README.md  Tokenizer.cpp  Tokenizer.h  boolean_search.cpp  clean_html.cpp  consultas.csv  func.cpp  func.h  main.cpp  makefile  split_index.cpp
lib/common/: Document.cpp  Document.h  PriorityQueue.cpp  PriorityQueue.h  Stopwords.cpp  Stopwords.h  func.cpp  func.h  linkmap.cpp  linkmap.h
lib/indexer/: Inverted_Index.cpp  Inverted_Index.h  Inverted_Index_Anchor.cpp  Inverted_Index_Anchor.h  Tokenizer.cpp  Tokenizer.h
lib/search/: Searcher.cpp  boolean_search.cpp  graph.cpp  graph.h  main_search.cpp  pagerank.cpp  pagerank.h  search.cpp  search.h  searcher.h  vectorialsearch.cpp  vectorialsearch.h
server/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  http_examples.cpp
server/src/: search.cpp  search.h  searcher.cpp  searcher.h  vectorialsearch.cpp  vectorialsearch.h
server/src/info/: doc_id  doc_id_anchor  pagerank  sorted_index_anchor  vocabulary  vocabulary_anchor  w_d  w_d_anchor
server/src/util/: Tokenizer.h  func.cpp  func.h
server/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  parse_test
server/web/: index.html  test.html
server/web/css/: bootstrap-tagsinput.css  jquery.dataTables.min.css  main.css  materialize.min.css  nouislider.min.css
server/web/font/: index.php
server/web/js/: jquery.dataTables.min.js  materialize.js  nouislider.min.js
